--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "db:migrate": "typeorm-ts-node-commonjs migration:run -d ./src/data-source.ts",
     "db:migrate:down": "typeorm-ts-node-commonjs migration:revert -d ./src/data-source.ts",
     "db:migrate:test": "NODE_ENV=test typeorm-ts-node-commonjs migration:run -d ./src/data-source.ts",
-    "db:migrate:test:down": "NODE_ENV=test typeorm-ts-node-commonjs migration:revert -d ./src/data-source.ts",
-    "model:generate": "typeorm-model-generator -d $DB_NAME -s public -u $DB_USERNAME -e postgres -h $DB_HOST && rm ./output/entities/TitleRaw.ts ./output/entities/TitleparcelRaw.ts ./output/entities/TitleownerRaw.ts ./output/entities/ParcelRaw.ts ./output/entities/EtlLog.ts && cp -r ./output/entities/. ./src/entity && rm -r ./output && sed -i '' 's/\"/'\\''/g' ./src/entity/*.ts && sed -i '' 's/, { schema: '\\''public'\\'' }//g' ./src/entity/*.ts"
+    "db:migrate:test:down": "NODE_ENV=test typeorm-ts-node-commonjs migration:revert -d ./src/data-source.ts"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
@@ -90,7 +89,6 @@
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typeorm-model-generator": "^0.4.6",
     "typescript": "^5.1.6"
   }
 }
